--- a/index.html
+++ b/index.html
@@ -40,17 +40,14 @@ function slice(array, from, to) {
     }
 }
 arr = [ 1, 2, 3, 4, 5 ];
-console.log(slice(arr,-52));
-console.log (arr.slice(-52));
+console.log(slice(arr,));
+console.log (arr.slice());
+console.log(slice(arr,));
+console.log (arr.slice());
+console.log(slice(arr,));
+console.log (arr.slice());
 
-//arr.slice(2) // => [3, 4, 5]
-//arr.slice(1, 4) // => [2, 3, 4]
-//arr.slice(2, 3) // => [3]
-//arr = [1, 2, 3, 4, 5]
-//arr.slice(-2) // => [4, 5]
-//arr.slice(arr.length - 2) // то же самое
-//arr.slice(-3, -1) // [3, 4]
-//arr.slice(arr.length-3, arr.length-1) // то же самое
+
 
 
 </script>
